--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "electron-quick-start",
+  "name": "psy",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
   "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "author": "Jozhek",
   "devDependencies": {
     "electron": "^2.0.0"
+  },
+  "dependencies": {
+    "jquery": "3.3.1"
   }
 }
